# nudge

./: .gitignore  .nudge-public-export  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  QUICK_START.md  README.en.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  TODO.md  checkpoint.md  config.example.toml  index.html  llms-full.txt  llms.txt  nudge.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: APPLE_ADAPTER_SURVEY.md  ARCHITECTURE.md  CLI.md  DAEMON_RUNBOOK.md  DESIGN.md  MCP_SECURITY.md  MODULE_MAP.md  PROMPT_PLAYBOOK.md  README.md  SETUP.md  SKILL_SPEC.md  architecture.md  commands.md  configuration.md  faq.md  index.md  llm.md  non-macos.md  package-lock.json  package.json  quick-start.md  reference.md  releasing.md
examples/: README.md  natural-language.md
food-pool/: index.html
i18n/: glossary.md
nudge/: __init__.py  action_hygiene.py  adapt.py  brain.py  cli.py  config.py  daemon_control_app.py  docs_audit.py  dogfood.py  errors.py  failures.py  family_routing.py  feedback.py  feedback_interview.py  health.py  json_contract.py  llm.py  reminder_lists.py  runtime.py  runtime_log.py  sleep_reminders.py  state.py  version.py
scripts/: bootstrap_launchd.sh  bootstrap_mac.sh  check-i18n-drift.py  check_package.sh  install_cli.sh  verify.sh
tests/: conftest.py  test_action_hygiene.py  test_adapt.py  test_apple_escape.py  test_apple_mock_backends.py  test_apple_reminders_safety.py  test_apple_text_escape.py  test_apple_tsv.py  test_brain_json.py  test_brain_json_parse.py  test_cli_reference_surface.py  test_commands_agent.py  test_commands_agent_contracts.py  test_commands_chat.py  test_commands_daemon.py  test_commands_daily.py  test_commands_do.py  test_commands_do_contracts.py  test_commands_docs.py  test_commands_doctor.py  test_commands_feedback.py  test_commands_health.py  test_commands_log_metric.py  test_commands_mcp.py  test_commands_mcp_contracts.py  test_commands_reminder_list_backfill.py  test_commands_reminders.py  test_commands_reminders_multi_list.py  test_commands_schedule.py  test_commands_skills.py  (+37 more)
(+86 files in other folders)
