[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nudge-ai-life-coach"
version = "0.5.1"
description = "AI life coach CLI for planning, scheduling, reminders, and reviews."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [
  {name = "Zenine"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Utilities",
]
dependencies = [
  "anthropic",
  "click",
  "defusedxml",
  "openai",
  "PyYAML",
]

[project.urls]
Homepage = "https://github.com/Zenine/nudge"
Repository = "https://github.com/Zenine/nudge"
Issues = "https://github.com/Zenine/nudge/issues"
Changelog = "https://github.com/Zenine/nudge/blob/main/CHANGELOG.md"

[project.scripts]
nudge = "nudge.cli:main"

[tool.setuptools.packages.find]
include = ["nudge*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"nudge.apple" = ["eventkit_calendar_events.swift", "eventkit_reminders_due_today.swift", "eventkit_reminders_mutate.swift"]
"nudge.skills" = ["builtins/*.yaml"]
